<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:gravity="center_vertical"
    android:padding="5dp">
    <TextView
        android:id="@+id/item_mymusic_postion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_1"
        android:gravity="center"
        android:textColor="#0d0c0c"
        android:textSize="18sp" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        >
        <TextView
            android:id="@+id/item_mymusic_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songname"
            android:textColor="#0d0c0c"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_mymusic_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_mymusic_song"
            android:text="@string/singer"
            android:textColor="#0d0c0c"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/item_mymusic_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_mymusic_song"
            android:layout_marginStart="15dp"
            android:textColor="#0d0c0c"
            android:layout_toEndOf="@+id/item_mymusic_singer"
            android:text="@string/songtime"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>